--- a/docs/sidebars.yaml
+++ b/docs/sidebars.yaml
@@ -6,3 +6,7 @@
   - Туториал
 - 4. Создание персонажа:
   - Создание персонажа
+- 5. Продвинутые фишки:
+  - Продвинутые фишки
+- 6. Эпилог:
+  - Эпилог
